Estabilizacion del mapa

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@mui/lab": "^5.0.0-alpha.87",
     "@mui/material": "^5.10.15",
     "@mui/x-data-grid": "^5.17.26",
+    "@mui/x-date-pickers": "^7.0.0",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +19,8 @@
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -51,6 +55,7 @@
   },
   "devDependencies": {
     "@testing-library/dom": "^8.19.0",
+    "@types/google.maps": "^3.55.5",
     "@types/googlemaps": "^3.43.3",
     "@types/lodash": "^4.14.191",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
