--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "dayjs": "^1.11.10",
     "google-map-react": "^2.2.1",
     "lodash": "^4.17.21",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,6 +60,7 @@
     "@types/google.maps": "^3.55.5",
     "@types/googlemaps": "^3.43.3",
     "@types/lodash": "^4.14.191",
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^5.44.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
