--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "lodash": "^4.17.21",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0"
   },
